--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 
 [dependencies]
 neovim-lib = "0.6.1"
-rspotify = {version = "0.11.7", features = ["cli", "env-file"]}
+rspotify = {version = "*", features = ["cli", "env-file"]}
 env_logger = "0.10.0"
 tokio = {version = "1.29.1", features = ["full"]}
 webbrowser = "0.8.10"
