--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,8 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-neovim-lib = "0.6.1"
-rspotify = {version = "0.11.7", features = ["cli", "env-file"]}
+neovim-lib = "*"
+rspotify = {version = "*", features = ["cli", "env-file"]}
 env_logger = "0.10.0"
 tokio = {version = "1.29.1", features = ["full"]}
 webbrowser = "0.8.10"
